--- a/src/components/media/media.scss
+++ b/src/components/media/media.scss
@@ -1,6 +1,12 @@
 @import '../../assets/scss/variables';
 @import '../../assets/scss/utilities';
 
+.media {
+  img {
+    width: 100%;
+  }
+}
+
 .media--small {
   @include breakpoint(sm) {
     flex: 0 0 25%;
